# video-tagger

./: Cargo.toml  start.bat  start.sh
src/: ai.rs  app.rs  audio.rs  cache.rs  config.rs  ffmpeg.rs  main.rs  progress.rs  scanner.rs  tags.rs
src/app/: ai_behavior.rs  ai_layout.rs  ai_ui.rs  behavior.rs  ui.rs
