[package]
name = "video-tagger"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31"
eframe = "0.31"
egui-winit = "0.31"
egui-wgpu = "0.31"
winit = "0.30"
wgpu = "24"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
image = "0.25"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rodio = "0.20"
notify = "6"

[profile.release]
opt-level = 2
lto = true
